@@ -245,3 +245,4 @@ Version 0.35
 * updated Russian translation
 * updated Greek translation (Dimitrios Glentadakis)
 * updated Dutch (Netherlands) translation (Heimen Stoffels)
+* updated German translation (Ettore Atalan)
